--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "@eslint/eslintrc": "^1.4.1",
+    "@eslint/js": "^8.35.0",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "eslint-config-prettier": "^8.6.0",
