--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-regexp": "^1.12.0",
     "eslint-plugin-sonarjs": "^0.18.0",
     "eslint-plugin-unicorn": "^46.0.0",
+    "globals": "^13.20.0",
     "prettier": "^2.8.4"
   },
   "devDependencies": {
