--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^40.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-regexp": "^1.12.0",
     "eslint-plugin-sonarjs": "^0.18.0",
