--- a/package.json
+++ b/package.json
@@ -45,7 +45,15 @@
     "eslint-plugin-sonarjs": "^0.18.0",
     "eslint-plugin-unicorn": "^46.0.0",
     "globals": "^13.20.0",
-    "prettier": "^2.8.4"
+    "postcss-scss": "^4.0.6",
+    "prettier": "^2.8.4",
+    "stylelint": "^15.2.0",
+    "stylelint-config-recommended": "^10.0.1",
+    "stylelint-config-recommended-scss": "^9.0.1",
+    "stylelint-config-standard": "^30.0.1",
+    "stylelint-config-standard-scss": "^7.0.1",
+    "stylelint-order": "^6.0.3",
+    "stylelint-scss": "^4.4.0"
   },
   "devDependencies": {
     "husky": "^8.0.3"
