--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
+  "arrowParens": "always",
+  "proseWrap": "never",
   "semi": true,
   "singleQuote": true,
   "trailingComma": "all"
