--- a/package.json
+++ b/package.json
@@ -39,28 +39,29 @@
     "prepack": "npm run build"
   },
   "dependencies": {
-    "@eslint/eslintrc": "^2.0.1",
-    "@eslint/js": "^8.36.0",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "eslint-config-prettier": "^8.7.0",
+    "@eslint/eslintrc": "^2.1.4",
+    "@eslint/js": "^8.57.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-import-resolver-typescript": "^3.8.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^40.0.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-regexp": "^1.12.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsdoc": "^40.3.0",
+    "eslint-plugin-promise": "^6.6.0",
+    "eslint-plugin-regexp": "^1.15.0",
     "eslint-plugin-sonarjs": "^0.18.0",
-    "eslint-plugin-unicorn": "^46.0.0",
-    "globals": "^13.20.0",
-    "postcss-scss": "^4.0.6",
-    "prettier": "^2.8.4",
-    "stylelint": "^15.2.0",
+    "eslint-plugin-unicorn": "^46.0.1",
+    "globals": "^13.24.0",
+    "postcss-scss": "^4.0.9",
+    "prettier": "^2.8.8",
+    "stylelint": "^15.11.0",
     "stylelint-config-recommended": "^10.0.1",
     "stylelint-config-recommended-scss": "^9.0.1",
     "stylelint-config-standard": "^30.0.1",
     "stylelint-config-standard-scss": "^7.0.1",
-    "stylelint-order": "^6.0.3",
-    "stylelint-scss": "^4.4.0"
+    "stylelint-order": "^6.0.4",
+    "stylelint-scss": "^4.7.0"
   },
   "devDependencies": {
     "husky": "^8.0.3",
