--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@averay/css-properties-sort-order": "^1.0.0",
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "9.20.0",
+    "@stylistic/eslint-plugin": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "8.24.0",
     "@typescript-eslint/parser": "8.24.0",
     "eslint-config-prettier": "10.0.1",
