Include module type definitions in package

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     ".prettierrc.json",
     "bin-codeformat.sh",
     "eslint.config.js",
-    "stylelint.config.cjs"
+    "stylelint.config.cjs",
+    "types.d.ts"
   ],
   "scripts": {
     "test": "bun test",
