--- a/package.json
+++ b/package.json
@@ -25,36 +25,36 @@
     "prepare": "bun --bun x husky"
   },
   "dependencies": {
-    "@averay/css-properties-sort-order": "^1.0.1",
-    "@eslint/eslintrc": "3.2.0",
-    "@eslint/js": "9.20.0",
-    "@stylistic/eslint-plugin": "^3.1.0",
-    "@typescript-eslint/eslint-plugin": "8.24.0",
-    "@typescript-eslint/parser": "8.24.0",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-import-resolver-typescript": "^3.8.3",
+    "@averay/css-properties-sort-order": "^1.0.3",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.29.0",
+    "@stylistic/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsdoc": "50.6.3",
-    "eslint-plugin-promise": "7.2.1",
-    "eslint-plugin-regexp": "2.7.0",
-    "eslint-plugin-sonarjs": "3.0.2",
-    "eslint-plugin-unicorn": "56.0.1",
-    "globals": "15.15.0",
+    "eslint-plugin-jsdoc": "^51.0.1",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-regexp": "^2.9.0",
+    "eslint-plugin-sonarjs": "^3.0.2",
+    "eslint-plugin-unicorn": "^59.0.1",
+    "globals": "^16.2.0",
     "postcss-scss": "^4.0.9",
-    "prettier": "3.5.1",
-    "stylelint": "16.14.1",
-    "stylelint-config-recommended": "15.0.0",
-    "stylelint-config-recommended-scss": "14.1.0",
-    "stylelint-config-standard": "37.0.0",
-    "stylelint-config-standard-scss": "14.0.0",
-    "stylelint-order": "^6.0.4",
-    "stylelint-scss": "6.11.0",
-    "typescript-eslint": "^8.25.0"
+    "prettier": "^3.5.3",
+    "stylelint": "^16.20.0",
+    "stylelint-config-recommended": "^16.0.0",
+    "stylelint-config-recommended-scss": "^15.0.1",
+    "stylelint-config-standard": "^38.0.0",
+    "stylelint-config-standard-scss": "^15.0.1",
+    "stylelint-order": "^7.0.0",
+    "stylelint-scss": "^6.12.1",
+    "typescript-eslint": "^8.34.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "husky": "9.1.7",
-    "typescript": "^5.8.2"
+    "husky": "^9.1.7",
+    "typescript": "^5.8.3"
   }
 }
