--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@averay/css-properties-sort-order": "^1.0.3",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.29.0",
+    "@prettier/plugin-php": "^0.22.4",
+    "@prettier/plugin-xml": "^3.4.1",
     "@stylistic/eslint-plugin": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
