--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   },
   "source": "./src/index.ts",
   "bin": {
-    "codeformat": "bin-codeformat.ts"
+    "codeformat": "bin/codeformat.ts"
   },
   "main": "./src/index.ts",
   "scripts": {
     "test": "bun test",
-    "format": "./bin-codeformat.ts fix",
-    "lint": "./bin-codeformat.ts check",
+    "format": "bin/codeformat.ts fix",
+    "lint": "bin/codeformat.ts check",
     "prepare": "bun --bun x husky",
     "release": "bun run lint && bun --bun x bumpp && bun publish"
   },
