--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "stylelint-config-standard-scss": "^15.0.1",
     "stylelint-order": "^7.0.0",
     "stylelint-scss": "^6.12.1",
+    "stylelint-use-logical": "^2.1.2",
     "typescript-eslint": "^8.34.0"
   },
   "devDependencies": {
