--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "./tsconfig.base.json",
+  "exclude": ["dist/**/*"],
   "compilerOptions": {
     "baseUrl": ".",
     "rootDir": "./",
