--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jsdoc": "^51.3.4",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-regexp": "^2.9.0",
