Add Knip support

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-sonarjs": "^3.0.4",
     "eslint-plugin-unicorn": "^59.0.1",
     "globals": "^16.2.0",
+    "knip": "^5.61.3",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.6.2",
     "stylelint": "^16.21.0",
