Disable unused default Prettier plugins

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,7 +4,5 @@
   "proseWrap": "never",
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "all",
-  "phpVersion": "8.2",
-  "plugins": ["@prettier/plugin-php", "@prettier/plugin-xml"]
+  "trailingComma": "all"
 }
