--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist && bun run build:tsc && chmod +x dist/bin/*.js",
+    "build": "rm -rf dist && bun run build:tsc && bun run build:php && chmod +x dist/bin/*.js",
     "build:tsc": "bun --bun x tsc --project tsconfig.build.json --outDir dist",
+    "build:php": "cp -R src/php dist/src/",
     "test": "bun test",
     "format": "dist/bin/codeformat.js fix",
     "lint": "dist/bin/codeformat.js check",
