--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "globals": "^16.3.0",
     "knip": "^5.61.3",
     "postcss-scss": "^4.0.9",
+    "prettier": "^3.6.2",
     "stylelint": "^16.21.1",
     "stylelint-config-recommended": "^16.0.0",
     "stylelint-config-recommended-scss": "^15.0.1",
