--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@averay/css-properties-sort-order": "^1.0.3",
     "@eslint/js": "^9.33.0",
+    "@eslint/markdown": "^7.1.0",
     "@prettier/plugin-php": "^0.24.0",
     "@prettier/plugin-xml": "^3.4.2",
     "@stylistic/eslint-plugin": "^5.2.3",
