--- a/.npmignore
+++ b/.npmignore
@@ -13,7 +13,7 @@
 /composer.lock
 /eslint.config.js
 /knip.config.ts
-/prettier.config.mjs
+/prettier.config.ts
 /stylelint.config.js
 /tsconfig.build.json
 
