--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "stylelint-config-standard": "^39.0.0",
     "stylelint-config-standard-scss": "^15.0.1",
     "stylelint-order": "^7.0.0",
+    "stylelint-plugin-defensive-css": "^1.0.4",
     "stylelint-scss": "^6.12.1",
     "stylelint-use-logical": "^2.1.2",
     "typescript-eslint": "^8.42.0"
