--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+  "require": {
+    "php": ">=8.4"
+  },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.89",
     "roave/security-advisories": "dev-latest"
