--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "knip": "^5.67.1",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.6.2",
+    "prettier-plugin-ini": "^1.3.0",
     "stylelint": "^16.25.0",
     "stylelint-config-recommended": "^17.0.0",
     "stylelint-config-recommended-scss": "^16.0.2",
