Remove undefined workflow variable reference

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Bun ${{ matrix.bun-version }}
+      - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with: { bun-version: latest }
 
