--- a/package.json
+++ b/package.json
@@ -36,6 +36,12 @@
     "release": "bun run lint && bun --bun x bumpp && bun publish",
     "watch": "bun run build:tsc --watch"
   },
+  "peerDependencies": {
+    "eslint": "^9.39.2",
+    "knip": "^5.78.0",
+    "prettier": "^3.7.4",
+    "stylelint": "^16.26.1"
+  },
   "dependencies": {
     "@averay/css-properties-sort-order": "^1.0.3",
     "@eslint/js": "^9.39.2",
@@ -47,7 +53,6 @@
     "@typescript-eslint/eslint-plugin": "^8.51.0",
     "@typescript-eslint/parser": "^8.51.0",
     "@typescript-eslint/utils": "^8.51.0",
-    "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -62,11 +67,8 @@
     "eslint-plugin-sonarjs": "^3.0.5",
     "eslint-plugin-unicorn": "^62.0.0",
     "globals": "^16.5.0",
-    "knip": "^5.78.0",
     "postcss-scss": "^4.0.9",
-    "prettier": "^3.7.4",
     "prettier-plugin-ini": "^1.3.0",
-    "stylelint": "^16.26.1",
     "stylelint-config-recommended": "^17.0.0",
     "stylelint-config-recommended-scss": "^16.0.2",
     "stylelint-config-standard": "^39.0.1",
