Build internal package before running

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "build:tsc": "bun --bun x tsc --project tsconfig.build.json --outDir dist",
     "build:php": "cp -R src/php dist/src/ && cp -R rulesets/php dist/rulesets/",
     "test": "bun test",
-    "format": "dist/bin/codeformat.js fix",
-    "lint": "dist/bin/codeformat.js check",
+    "format": "bun run build && dist/bin/codeformat.js fix",
+    "lint": "bun run build && dist/bin/codeformat.js check",
     "prepare": "bun --bun x husky",
     "prepack": "bun run build",
     "release": "bun run lint && bun --bun x bumpp && bun publish --access=public",
