--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@averay/css-properties-sort-order": "^1.0.3",
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.6.0",
     "@eslint/js": "^10.0.1",
     "@eslint/markdown": "^7.5.1",
     "@prettier/plugin-php": "^0.24.0",
@@ -55,7 +56,6 @@
     "@typescript-eslint/utils": "^8.55.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jsdoc": "^62.5.4",
     "eslint-plugin-jsx-a11y": "^6.10.2",
